devops/timetable-deployment-6d858cfbd4-gm5xh.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cattle.io/timestamp: '2023-12-20T17:07:41Z'
    cni.projectcalico.org/containerID: 7d8a7e93b1607449dafe39ce22cc37d687c1cee42e0990770659282251925a5b
    cni.projectcalico.org/podIP: 10.42.5.163/32
    cni.projectcalico.org/podIPs: 10.42.5.163/32
    kubectl.kubernetes.io/restartedAt: '2024-01-11T19:33:00Z'
  creationTimestamp: '2024-01-11T19:33:00Z'
  generateName: timetable-deployment-6d858cfbd4-
  labels:
    app: timetable
    pod-template-hash: 6d858cfbd4
    workload.user.cattle.io/workloadselector: apps.deployment-c114a-orar-timetable-deployment
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cattle.io/timestamp: {}
            f:kubectl.kubernetes.io/restartedAt: {}
          f:generateName: {}
          f:labels:
            .: {}
            f:app: {}
            f:pod-template-hash: {}
            f:workload.user.cattle.io/workloadselector: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"bd244e56-d10d-4b5d-a271-abaec3636449"}: {}
        f:spec:
          f:containers:
            k:{"name":"container-0"}:
              .: {}
              f:image: {}
              f:imagePullPolicy: {}
              f:name: {}
              f:ports:
                .: {}
                k:{"containerPort":8080,"protocol":"TCP"}:
                  .: {}
                  f:containerPort: {}
                  f:name: {}
                  f:protocol: {}
              f:resources: {}
              f:securityContext:
                .: {}
                f:allowPrivilegeEscalation: {}
                f:privileged: {}
                f:readOnlyRootFilesystem: {}
                f:runAsNonRoot: {}
              f:terminationMessagePath: {}
              f:terminationMessagePolicy: {}
          f:dnsPolicy: {}
          f:enableServiceLinks: {}
          f:imagePullSecrets:
            .: {}
            k:{"name":"docker-secrets"}: {}
          f:restartPolicy: {}
          f:schedulerName: {}
          f:securityContext: {}
          f:terminationGracePeriodSeconds: {}
      manager: kube-controller-manager
      operation: Update
      time: '2024-01-11T19:33:00Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:cni.projectcalico.org/containerID: {}
            f:cni.projectcalico.org/podIP: {}
            f:cni.projectcalico.org/podIPs: {}
      manager: calico
      operation: Update
      subresource: status
      time: '2024-01-11T19:33:01Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:conditions:
            k:{"type":"ContainersReady"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Initialized"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Ready"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
          f:containerStatuses: {}
          f:hostIP: {}
          f:phase: {}
          f:podIP: {}
          f:podIPs:
            .: {}
            k:{"ip":"10.42.5.163"}:
              .: {}
              f:ip: {}
          f:startTime: {}
      manager: kubelet
      operation: Update
      subresource: status
      time: '2024-01-11T19:33:06Z'
  name: timetable-deployment-6d858cfbd4-gm5xh
  namespace: c114a-orar
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: timetable-deployment-6d858cfbd4
      uid: bd244e56-d10d-4b5d-a271-abaec3636449
  resourceVersion: '59619607'
  uid: 5d75d53f-b43a-425e-8ed3-18f659ad8238
spec:
  containers:
    - image: tudormiron/time-table-app:latest
      imagePullPolicy: Always
      name: container-0
      ports:
        - containerPort: 8080
          name: tt-service
          protocol: TCP
      resources: {}
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        readOnlyRootFilesystem: false
        runAsNonRoot: false
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-rncrd
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
    - name: docker-secrets
  nodeName: 10.13.101.21
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: kube-api-access-rncrd
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: '2024-01-11T19:33:00Z'
      status: 'True'
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: '2024-01-11T19:33:06Z'
      status: 'True'
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: '2024-01-11T19:33:06Z'
      status: 'True'
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: '2024-01-11T19:33:00Z'
      status: 'True'
      type: PodScheduled
  containerStatuses:
    - containerID: >-
        docker://153b965dcad28dc4177e5429622d89845bf617265b6ec3bea4e326824f526481
      image: tudormiron/time-table-app:latest
      imageID: >-
        docker-pullable://tudormiron/time-table-app@sha256:71faf75877d5bd2bfab5a064df24baaff3941853ad0e7dbc523fda28871e3ce5
      lastState: {}
      name: container-0
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: '2024-01-11T19:33:06Z'
  hostIP: 10.13.101.21
  phase: Running
  podIP: 10.42.5.163
  podIPs:
    - ip: 10.42.5.163
  qosClass: BestEffort
  startTime: '2024-01-11T19:33:00Z'
