devops/timetable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '39'
    field.cattle.io/description: this is the deployment of the time table application
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["10.13.0.105","10.13.101.21","10.13.101.22","10.13.101.23"],"port":443,"protocol":"HTTPS","serviceName":"c114a-orar:timetable-deployment","ingressName":"c114a-orar:timetable-ingress","hostname":"time-table.apps.fsisc.ro","path":"/api/v1","allNodes":false}]
  creationTimestamp: '2023-12-12T07:09:19Z'
  generation: 62
  labels:
    app: timetable
    workload.user.cattle.io/workloadselector: apps.deployment-c114a-orar-timetable-deployment
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/description: {}
            f:field.cattle.io/publicEndpoints: {}
          f:labels:
            .: {}
            f:app: {}
            f:workload.user.cattle.io/workloadselector: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:annotations:
                .: {}
                f:cattle.io/timestamp: {}
              f:labels:
                .: {}
                f:app: {}
                f:workload.user.cattle.io/workloadselector: {}
              f:namespace: {}
            f:spec:
              f:containers:
                k:{"name":"container-0"}:
                  .: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":8080,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:securityContext:
                    .: {}
                    f:allowPrivilegeEscalation: {}
                    f:privileged: {}
                    f:readOnlyRootFilesystem: {}
                    f:runAsNonRoot: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:imagePullSecrets:
                .: {}
                k:{"name":"docker-secrets"}: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
      manager: rancher
      operation: Update
      time: '2024-01-03T08:53:10Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:metadata:
              f:annotations:
                f:kubectl.kubernetes.io/restartedAt: {}
      manager: kubectl-rollout
      operation: Update
      time: '2024-01-11T19:33:00Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      manager: kube-controller-manager
      operation: Update
      subresource: status
      time: '2024-01-11T19:33:06Z'
  name: timetable-deployment
  namespace: c114a-orar
  resourceVersion: '59619622'
  uid: f5634da1-3a07-41de-a695-9e209b0f86c9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-c114a-orar-timetable-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2023-12-20T17:07:41Z'
        kubectl.kubernetes.io/restartedAt: '2024-01-11T19:33:00Z'
      creationTimestamp: null
      labels:
        app: timetable
        workload.user.cattle.io/workloadselector: apps.deployment-c114a-orar-timetable-deployment
      namespace: c114a-orar
    spec:
      containers:
        - image: tudormiron/time-table-app:latest
          imagePullPolicy: Always
          name: container-0
          ports:
            - containerPort: 8080
              name: tt-service
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: docker-secrets
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2024-01-03T13:52:02Z'
      lastUpdateTime: '2024-01-03T13:52:02Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
    - lastTransitionTime: '2023-12-12T07:09:19Z'
      lastUpdateTime: '2024-01-11T19:33:06Z'
      message: >-
        ReplicaSet "timetable-deployment-6d858cfbd4" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
  observedGeneration: 62
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
